Fix home component unnecessary scrollbar

--- a/frontend/src/app/modules/home/home.component.scss
+++ b/frontend/src/app/modules/home/home.component.scss
@@ -22,8 +22,3 @@
   // background-color: #f2f2f2;
   width: 80%;
 }
-
-.full-size {
-  width: 100%;
-  height: 100%;
-}
